added content to tab below

--- a/particlesjs-config.json
+++ b/particlesjs-config.json
@@ -8,7 +8,7 @@
       }
     },
     "color": {
-      "value": "#f15e66"
+      "value": "#fa3f50"
     },
     "shape": {
       "type": "circle",
